force-app/main/default/objects/Case/fields/Kayako_Case_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Kayako_Case_Created_At__c</fullName>
    <label>Kayako Case Created At</label>
    <type>DateTime</type>
</CustomField>