force-app/main/default/objects/Case/fields/Kayako_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Kayako_Case_ID__c</fullName>
    <externalId>true</externalId>
    <label>Kayako Case ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>