force-app/main/default/objects/Case/fields/Kayako_Name__c.field-meta.xml
<CustomField>
    <fullName>Kayako_Name__c</fullName>
    <label>Kayako Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>